# pam_pidea_linotp

./: README  autogen.sh  configure.ac
src/: Makefile.am  pam_pidea_linotp.c
